apps/bookinfo/reviews/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  type: ClusterIP
  selector:
    app: reviews
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      protocol: TCP
